@@ -1,3 +1,10 @@
+Fri Aug 23 00:15:47 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-keybinding-properties.c (setup_dialog): use new X mode of
+	the eggcellrendererkeys.
+
+	* eggcellrendererkeys.[ch]: update from libegg.
+
 2002-08-22  Deepa Natarajan <deepa.natarajan@wipro.com>
 
 	* gnome-keybinding-properties.c: Added [un]maximize metacity bindings.
